--- a/.gitmodules
+++ b/.gitmodules
@@ -21,4 +21,4 @@
 	url = git@github.com:ervandew/supertab.git
 [submodule "bundle/ultisnips"]
 	path = bundle/ultisnips
-	url = https://github.com/SirVer/ultisnips
+	url = git@github.com:SirVer/ultisnips.git
