--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "bundle/ultisnips"]
 	path = bundle/ultisnips
 	url = git@github.com:SirVer/ultisnips.git
+[submodule "bundle/Smart-Tabs"]
+	path = bundle/Smart-Tabs
+	url = git@github.com:vim-scripts/Smart-Tabs.git
