--- a/.gitmodules
+++ b/.gitmodules
@@ -65,3 +65,6 @@
 [submodule "bundle/i3-syntax"]
 	path = bundle/i3-syntax
 	url = git@github.com:PotatoesMaster/i3-vim-syntax.git
+[submodule "bundle/YouCompleteMe"]
+	path = bundle/YouCompleteMe
+	url = https://github.com/Valloric/YouCompleteMe.git
