--- a/.gitmodules
+++ b/.gitmodules
@@ -1,73 +1,3 @@
-[submodule "bundle/vim-colors-solarized"]
-	path = bundle/vim-colors-solarized
-	url = git@github.com:altercation/vim-colors-solarized.git
-[submodule "bundle/vim-latex"]
-	path = bundle/vim-latex
-	url = git@github.com:jcf/vim-latex.git
-[submodule "bundle/nerdcommenter"]
-	path = bundle/nerdcommenter
-	url = git@github.com:scrooloose/nerdcommenter.git
-[submodule "bundle/autotag"]
-	path = bundle/autotag
-	url = git@github.com:vim-scripts/AutoTag.git
-[submodule "bundle/delimitMate"]
-	path = bundle/delimitMate
-	url = git@github.com:Raimondi/delimitMate.git
-[submodule "bundle/matchit"]
-	path = bundle/matchit
-	url = git@github.com:bullfight/vim-matchit.git
-[submodule "bundle/supertab"]
-	path = bundle/supertab
-	url = git@github.com:ervandew/supertab.git
-[submodule "bundle/ultisnips"]
-	path = bundle/ultisnips
-	url = git@github.com:SirVer/ultisnips.git
-	ignore = untracked
-[submodule "bundle/Smart-Tabs"]
-	path = bundle/Smart-Tabs
-	url = git@github.com:vim-scripts/Smart-Tabs.git
-[submodule "bundle/taglist"]
-	path = bundle/taglist
-	url = https://github.com/yazug/vim-taglist-plus.git
-[submodule "bundle/octave"]
-	path = bundle/octave
-	url = git@github.com:MPogoda/octave.vim--.git
-[submodule "bundle/Conque-GDB"]
-	path = bundle/Conque-GDB
-	url = https://github.com/vim-scripts/Conque-GDB.git
-[submodule "bundle/clang_complete"]
-	path = bundle/clang_complete
-	url = https://github.com/Rip-Rip/clang_complete.git
-[submodule "bundle/OmniCppComplete"]
-	path = bundle/OmniCppComplete
-	url = https://github.com/vim-scripts/OmniCppComplete.git
-[submodule "bundle/LaTeX-Box"]
-	path = bundle/LaTeX-Box
-	url = git://github.com/LaTeX-Box-Team/LaTeX-Box.git
-[submodule "bundle/vim-snippets"]
-	path = bundle/vim-snippets
-	url = git@github.com:honza/vim-snippets.git
-[submodule "bundle/vinegar"]
-	path = bundle/vinegar
-	url = git://github.com/tpope/vim-vinegar.git
-[submodule "bundle/characterize"]
-	path = bundle/characterize
-	url = git://github.com/tpope/vim-characterize.git
-[submodule "bundle/fugitive"]
-	path = bundle/fugitive
-	url = git://github.com/tpope/vim-fugitive.git
-[submodule "bundle/eunuch"]
-	path = bundle/eunuch
-	url = git://github.com/tpope/vim-eunuch.git
-[submodule "bundle/syntastic"]
-	path = bundle/syntastic
-	url = https://github.com/scrooloose/syntastic.git
-[submodule "bundle/i3-syntax"]
-	path = bundle/i3-syntax
-	url = git@github.com:PotatoesMaster/i3-vim-syntax.git
-[submodule "bundle/YouCompleteMe"]
-	path = bundle/YouCompleteMe
-	url = https://github.com/Valloric/YouCompleteMe.git
-[submodule "bundle/vim-trailing-whitespace"]
-	path = bundle/vim-trailing-whitespace
-	url = git@github.com:bronson/vim-trailing-whitespace.git
+[submodule "bundle/Vundle.vim"]
+	path = bundle/Vundle.vim
+	url = https://github.com/gmarik/Vundle.vim.git
